@@ -8,6 +8,7 @@ Prawn::FLOAT_PRECISION = 1e-3
 require_relative 'prawn/document/column_box'
 require_relative 'prawn/font_metric_cache'
 require_relative 'prawn/font/afm'
+require_relative 'prawn/font/ttf'
 require_relative 'prawn/images'
 require_relative 'prawn/formatted_text/arranger'
 require_relative 'prawn/formatted_text/box'
