@@ -43,6 +43,7 @@ Improvements::
 
 Bug Fixes::
 
+* always force NULL character to have 0 width, even if missing from font (#2585)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
